@@ -2,6 +2,7 @@
 ======
 Aug 15
 - Only log stack traces to console if DEBUG logging is enabled
+- Allow up to 18 frames per second in slideshow playback
 
 2.19.3
 ======
